appsetting for aws

--- a/AMS/appsettings.json
+++ b/AMS/appsettings.json
@@ -21,5 +21,12 @@
     "Port": 587,
     "SenderEmail": "adityasawant5814@gmail.com",
     "SenderPassword": "zuhqfhffroxjqxww"
+  },
+  "aws": {
+    "AccessKey": "AKIAS6J7P73SVTCL3WPB",
+    "SecretKey": "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",
+    "BucketName": "adityasawant58",
+    "Region": "eu-north-1",
+    "BaseUrl": "https://adityasawant58.s3.eu-north-1.amazonaws.com/practfolder1/"
   }
 }
